[gd_scene load_steps=4 format=3 uid="uid://d3lob0e1ebkhc"]

[ext_resource type="Theme" uid="uid://cam2k5o3w3gc0" path="res://Assets/main_them.tres" id="1_qngpd"]
[ext_resource type="PackedScene" uid="uid://dbtvdwtixkfrp" path="res://Scenes/UI/volume_slider.tscn" id="1_tqq60"]
[ext_resource type="Script" uid="uid://cd35iu6bt4fkh" path="res://Scripts/UI/pause_screen.gd" id="2_yb6qg"]

[node name="PauseScreen" type="Control"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qngpd")
script = ExtResource("2_yb6qg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.494118)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioSettings" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/AudioSettings"]
layout_mode = 2
theme_override_constants/h_separation = 8
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/AudioSettings/GridContainer"]
layout_mode = 2
text = "Master Volume"

[node name="VolumeSlider" parent="VBoxContainer/AudioSettings/GridContainer" instance=ExtResource("1_tqq60")]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Label2" type="Label" parent="VBoxContainer/AudioSettings/GridContainer"]
layout_mode = 2
text = "Music Volume"
horizontal_alignment = 2

[node name="VolumeSlider2" parent="VBoxContainer/AudioSettings/GridContainer" instance=ExtResource("1_tqq60")]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bus = &"BGM"

[node name="Label3" type="Label" parent="VBoxContainer/AudioSettings/GridContainer"]
layout_mode = 2
text = "SFX Volume"
horizontal_alignment = 2

[node name="VolumeSlider3" parent="VBoxContainer/AudioSettings/GridContainer" instance=ExtResource("1_tqq60")]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bus = &"SFX"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="save" type="Button" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
text = "​​Save Game​​"

[node name="Actions" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Actions"]
layout_mode = 2
alignment = 1

[node name="Continue" type="Button" parent="VBoxContainer/Actions/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Continue"

[node name="Control" type="Control" parent="VBoxContainer/Actions/HBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="quit" type="Button" parent="VBoxContainer/Actions/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Quit"

[connection signal="pressed" from="VBoxContainer/PanelContainer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/Actions/HBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Actions/HBoxContainer/quit" to="." method="_on_quit_pressed"]
